--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -3,4 +3,11 @@
 <!-- You can set your favicon here -->
 <link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}">
 
+  <style type="text/css"> 
+  .padded img { 
+    padding-left: 6em; 
+    padding-right: 6em; 
+  } 
+  </style> 
+
 <!-- end custom head snippets -->
